tests/ui/asm/invalid-const-operand.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/invalid-const-operand.rs:49:26
   |
LL |         asm!("{}", const x);
   |                          ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -         let x = 0;
LL +         const x: /* Type */ = 0;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/invalid-const-operand.rs:52:36
   |
LL |         asm!("{}", const const_foo(x));
   |                                    ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -         let x = 0;
LL +         const x: /* Type */ = 0;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/invalid-const-operand.rs:55:36
   |
LL |         asm!("{}", const const_bar(x));
   |                                    ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -         let x = 0;
LL +         const x: /* Type */ = 0;
   |

error: invalid type for `const` operand
  --> $DIR/invalid-const-operand.rs:14:19
   |
LL | global_asm!("{}", const 0f32);
   |                   ^^^^^^----
   |                         |
   |                         is an `f32`
   |
   = help: `const` operands must be of an integer or thin pointer type

error: invalid type for `const` operand
  --> $DIR/invalid-const-operand.rs:25:20
   |
LL |         asm!("{}", const 0f32);
   |                    ^^^^^^----
   |                          |
   |                          is an `f32`
   |
   = help: `const` operands must be of an integer or thin pointer type

error: invalid type for `const` operand
  --> $DIR/invalid-const-operand.rs:29:20
   |
LL |         asm!("{}", const b"Foo".as_slice());
   |                    ^^^^^^-----------------
   |                          |
   |                          is a `&[u8]`
   |
   = help: `const` operands must be of an integer or thin pointer type

error: invalid type for `const` operand
  --> $DIR/invalid-const-operand.rs:33:20
   |
LL |         asm!("{}", const test1);
   |                    ^^^^^^-----
   |                          |
   |                          is a `fn() {test1}`
   |
   = help: `const` operands must be of an integer or thin pointer type

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0435`.
